compiler/tools/fpp-to-dict/test/top/arrayFwEventIdType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/arrayFwEventIdType.fpp:5.1
array FwEventIdType = [3] F32
^
error: type must be an alias of an integer type.
